--- a/roles/ocp4-install-vsphere/tasks/deploy.yml
+++ b/roles/ocp4-install-vsphere/tasks/deploy.yml
@@ -2,7 +2,7 @@
 
     - name: '[INSTALL] Installing Openshift Cluster...'
       shell: 
-        cmd: "{{ user_path }}/openshift-install create cluster --dir {{ user_path }} --log-level debug"
+        cmd: "{{ files_path }}/openshift-install create cluster --dir {{ deploy_path }} --log-level debug"
       async: 21000
       poll: 0
       register: install
@@ -13,16 +13,21 @@
       register: job_result
       until: job_result.finished
       retries: 120
-      delay: 30
+      delay: 60
     
     - name: '[INSTALL] Output Install Log...'
+      shell:
+        cmd: "tail -13 {{ deploy_path }}/.openshift_install.log"
+      register: log_install
+    
+    - name: '[INSTALL] Print Logs Install - Info Cluster'
       debug:
-         var: install.stdout_lines
+        var: log_install.stdout_lines
     
     - name: '[INSTALL] Gzip Install files'
       archive:
-        path: "{{ user_path }}/{{ item }}"
-        dest: "{{ tower_path }}/{{ cluster_name }}-{{ ocp_cluster }}-install.gz"
+        path: "{{ deploy_path }}/{{ item }}"
+        dest: "{{ files_path }}/{{ cluster_name }}-{{ ocp4_base_domain }}-install.gz"
         format: gz
       loop:
         - .openshift_install_state.json
@@ -32,6 +37,8 @@
         - metadata.json
         - terraform.aws.auto.tfvars.json
         - openshift-install
-      when:
-        - tower_used is defined
-        - tower_used | bool
+        - install-config.yaml.bck
+        - .ssh
+#      when:
+#        - tower_used is defined
+#        - tower_used | bool
