--- a/roles/ocp4-install-vsphere/tasks/download.yml
+++ b/roles/ocp4-install-vsphere/tasks/download.yml
@@ -8,7 +8,7 @@
 - name: '[OCP4-INSTALL] Download the required ocp4 tooling'
   get_url:
     url: "{{ var_installer_baseurl }}/{{ pkg }}"
-    dest: "{{ user_path }}/{{ pkg }}"
+    dest: "{{ files_path }}/{{ pkg }}"
   loop:
     - "{{ var_installer_program }}"
     - "{{ var_installer_clienttools }}"
@@ -19,7 +19,7 @@
 - name: '[OCP4-INSTALL] Ensure downloaded installers are unarchived'
   unarchive:
     src: "{{ user_path }}/{{ pkg }}"
-    dest: "{{ user_path }}"
+    dest: "{{ files_path }}"
   loop:
     - "{{ var_installer_program }}"
     - "{{ var_installer_clienttools }}"
