--- a/main.yml
+++ b/main.yml
@@ -17,3 +17,10 @@
         name: "ocp4-install-vsphere"
       when:
         - only_post_install != True
+
+    - name: '[OCP4-AUTO-INSTALL][POST-INSTALL][INFRA-NODES] Deploy and configure Infra Nodes'
+      include_role:
+        name: "ocp4-post-infra-nodes"
+      when:
+        - infra_nodes is defined
+        - infra_nodes | bool
