--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -50,8 +50,19 @@ prometheusSizeGB: "40Gi"
 alertManagerSizeGB: "2Gi"
 storageClassMonitoring: "thin-csi"
 
-# Logging
+#Logging
+install_logging: True
 logging: True
 clo_node_selector: "node-role.kubernetes.io/infra="
 es_channel: "stable" #Define the ES version of the operator
-clo_channel: 4.3 #Define the ClusterLogging version of the operator
+olo_channel: "stable" #Define the ClusterLogging version of the operator
+
+#Logging Instance
+app_max_age: '7d'
+infra_max_age: '7d'
+audit_max_age: '7d'
+#if you have a single replica (es_nodeCount: "1") the type of redundancy will be 'ZeroRedundancy', with 3 replicas you can use 'SingleRedundancy', 'FullRedundancy' or 'MultipleRedundancy'.
+es_nodeCount: "1"
+es_redundancy: "ZeroRedundancy"
+es_storageClass: "thin-csi"
+es_diskSize: "200Gi"
