--- a/roles/ocp4-post-logging/tasks/configuration.yml
+++ b/roles/ocp4-post-logging/tasks/configuration.yml
@@ -4,4 +4,18 @@
   k8s:
     kubeconfig: "{{ kubeconfig }}"
     state: present
-    definition: "{{ lookup('template', 'logging-crd.yml') }}"
+    definition: "{{ lookup('template', 'templates/logging-crd.yml') }}"
+
+- name: '[POSTINSTALL][LOGGING] Wait for operator to be ready'
+  pause:
+    seconds: 60
+
+- name: '[POSTINSTALL][LOGGING] Wait for OpenShift Logging to be available'
+  k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
+    kind: Pod
+    wait: yes
+    namespace: openshift-logging
+    field_selectors:
+      - status.phase=Running
+    validate_certs: false
