--- a/roles/ocp4-post-logging/templates/eo-namespace.yml
+++ b/roles/ocp4-post-logging/templates/eo-namespace.yml
@@ -1,11 +1,8 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: openshift-operators-redhat
-{%if clo_node_selector is defined %}
-  annotations:    
-    openshift.io/node-selector: "{{ clo_node_selector }}"
-    scheduler.alpha.kubernetes.io/defaultTolerations: '[{"Key": "node-role.kubernetes.io/infra", "Value": "reserved", "Effect": "NoSchedule"},{"Key": "node-role.kubernetes.io/infra", "Value": "reserved", "Effect": "NoExecute"}]'
-{% endif %}
+  name: openshift-operators-redhat 
+  annotations:
+    openshift.io/node-selector: ""
   labels:
-    openshift.io/cluster-monitoring: "true"
+    openshift.io/cluster-monitoring: "true" 
