--- a/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
+++ b/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
@@ -1,5 +1,9 @@
 ---
 
+- name: '[POSTINSTALL][INFRA-NODES] Wait for Cluster to be ready'
+  pause:
+    seconds: 60
+
 - name: '[POSTINSTALL][INFRA-NODES] Grab some global cluster trivia for git to use'
   k8s_info:
     kubeconfig: "{{ kubeconfig }}"
@@ -33,8 +37,8 @@
   register: r_infra_nodes
   until:
   - r_infra_nodes.resources | length | int == infra_node_replicas | int
-  delay: 30
-  retries: 15
+  delay: 60
+  retries: 30
 
 - name: '[POSTINSTALL][INFRA-NODES] Get ClusterVersion'
   k8s_info:
@@ -48,7 +52,11 @@
   set_fact:
     ocp4_workload_machinesets_cluster_version: "{{ r_cluster_version.resources[0].status.history[0].version }}"
 
-- name: '[DEBUG] - PRINT CLUSTER VERSION'
+- name: '[POSTINSTALL][INFRA-NODES] Wait for Infra Nodes to be ready'
+  pause:
+    seconds: 60
+
+- name: '[POSTINSTALL][INFRA-NODES] - Print Cluster Version'
   debug:
     msg: 
     - "Cluster Version is: {{ ocp4_workload_machinesets_cluster_version }}"
@@ -75,6 +83,10 @@
     definition: "{{ lookup('template', '{{ item }}') }}"
   loop:
   - configmap-cluster-monitoring.j2
+
+- name: '[POSTINSTALL][INFRA-NODES] Wait for Cluster Monitoring Replace Resources'
+  pause:
+    seconds: 60
 
 - name: '[POSTINSTALL][INFRA-NODES] Wait for Cluster Monitoring to be available'
   k8s_info:
