--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -5,11 +5,15 @@ ocp4_cluster_name: "ocp"
 kubeconfig: "{{ deploy_path }}/auth/kubeconfig"
 local_kubeconfig: '~/.kube/{{ cluster_name }}'
 installCreateFolder: False
-pre_reqs_install: False
-only_post_install: False
-infra_post_install: False
+
+#Modules
+pre_reqs_install: True
+only_post_install: True
+infra_post_install: True
+install_logging: True
 bkp_etcd_post_install: True
 install_odf: False
+
 
 #### Only in Tower-mode
 tower_used: False
@@ -53,7 +57,6 @@ alertManagerSizeGB: "2Gi"
 storageClassMonitoring: "thin-csi"
 
 #Logging
-install_logging: True
 logging: True
 clo_node_selector: "node-role.kubernetes.io/infra="
 es_channel: "stable" #Define the ES version of the operator
@@ -69,6 +72,10 @@ es_redundancy: "ZeroRedundancy"
 es_storageClass: "thin-csi"
 es_diskSize: "200Gi"
 
-
 #ODF
 install_odf: False
+
+#BKP_ETCD
+ns_bkp_etcd: "ocp-etcd-backup"
+bkp_etcd_nfs: False
+bkp_etcd_local: True
