--- a/roles/ocp4-post-bkp-etcd/templates/role-binding-etcd-bkp.yml
+++ b/roles/ocp4-post-bkp-etcd/templates/role-binding-etcd-bkp.yml
@@ -7,7 +7,7 @@ metadata:
 subjects:
   - kind: ServiceAccount
     name: openshift-backup
-    namespace: ocp-etcd-backup
+    namespace: {{ ns_bkp_etcd }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
