--- a/roles/ocp4-post-bkp-etcd/templates/scc-privileged-etcd-bkp.yml
+++ b/roles/ocp4-post-bkp-etcd/templates/scc-privileged-etcd-bkp.yml
@@ -2,9 +2,8 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  creationTimestamp: null
   name: system:openshift:scc:privileged
-  namespace: ocp-etcd-bkp
+  namespace: {{ ns_bkp_etcd }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -12,14 +11,13 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: openshift-backup
-  namespace: ocp-etcd-bkp
+  namespace: {{ ns_bkp_etcd }}
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  creationTimestamp: null
   name: system:openshift:scc:privileged
-  namespace: ocp-etcd-bkp
+  namespace: {{ ns_bkp_etcd }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
@@ -27,4 +25,4 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: default
-  namespace: ocp-etcd-bkp
+  namespace: {{ ns_bkp_etcd }}
