--- a/roles/ocp4-install-vsphere/tasks/create_config.yml
+++ b/roles/ocp4-install-vsphere/tasks/create_config.yml
@@ -2,8 +2,15 @@
 
 - name: '[INSTALL_CONFIG] Generate config install-config.yaml'
   template:
-    src: install-config.yaml.j2
+    src: install-config-yml-4-10.j2
     dest: "{{ deploy_path }}/install-config.yaml"
+  when: "{{ ocp4_version }} == 4.10"
+
+- name: '[INSTALL_CONFIG] Generate config install-config.yaml'
+  template:
+    src: install-config-yml-4-12.j2
+    dest: "{{ deploy_path }}/install-config.yaml"
+  when: "{{ ocp4_version }} == 4.12"
 
 - name: '[INSTALL_CONFIG] Make a copy of the cluster install config for backup purposes'
   copy:
