--- a/roles/ocp4-install-vsphere/tasks/create_config.yml
+++ b/roles/ocp4-install-vsphere/tasks/create_config.yml
@@ -9,13 +9,13 @@
   template:
     src: "{{ template_config }}"
     dest: "{{ deploy_path }}/install-config.yaml"
-  when: ocp4_version == search("4.10")
+  when: ocp4_version == regex_search('^(4.10)')
 
 - name: '[INSTALL_CONFIG] Generate config install-config.yaml'
   template:
     src: install-config-yml-4-12.j2
     dest: "{{ deploy_path }}/install-config.yaml"
-  when: ocp4_version == search("4.12")
+  when: ocp4_version == regex_search('^(4.12)')
 
 - name: '[INSTALL_CONFIG] Make a copy of the cluster install config for backup purposes'
   copy:
