--- a/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
+++ b/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
@@ -19,13 +19,62 @@
     definition: "{{ lookup('template', 'mcp-infra.yml') }}"
     validate_certs: false
 
-- name: '[POSTINSTALL][INFRA-NODES] Deploy Infra Nodes MachineSet'
-  vars:
-    node_labels:
-    - "{{ infra_label }}"
-    name_identifier: "{{ infra_label }}"
-  include_role:
-    name: ocp4-post-machinesets
+- name: '[OCP4-POSTINSTALL][MACHINESET] Fetch cluster information about the Infrastructure'
+  k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
+    api_version: config.openshift.io/v1
+    kind: Infrastructure
+    name: cluster
+  register: cluster_info
+
+- name: '[POSTINSTALL][MACHINESET] Show info about the cluster of OCP4'
+  debug:
+    msg: "{{ cluster_info }}"
+
+- name: '[POSTINSTALL][MACHINESET] Search and fetch Infra id in {{ cluster_info.resources.0.status.infrastructureName }}-master-0 machine'
+  k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
+    api_version: machine.openshift.io/v1beta1
+    kind: Machine
+    name: "{{ cluster_info.resources.0.status.infrastructureName }}-master-0"
+    namespace: openshift-machine-api
+  register: amimaster0
+
+- name: '[POSTINSTALL][MACHINESET] Build the {{ node_labels }} machineset facts'
+  set_fact:
+    machineset:
+      infrastructure_id: "{{ cluster_info.resources.0.status.infrastructureName }}"
+      node_labels: "{{ node_labels }}"
+      name_identifier: "{{ name_identifier }}"
+
+- name: '[POSTINSTALL][MACHINESET] Display the data for the {{ node_labels }} machinesets'
+  debug:
+    var: machineset
+
+- name: '[POSTINSTALL][MACHINESET] Create File Machineset for the{{ node_labels }} machineset'
+  template:
+    src: machineset-infra-vsphere.j2
+    dest: "{{ files_path }}/machineset-infra-vsphere.yaml"
+  when: infra_post_install == True
+
+- name: '[POSTINSTALL][MACHINESET] Create the {{ infra_label }} machineset'
+  k8s:
+    kubeconfig: "{{ kubeconfig }}"
+    name: openshift-machine-api
+    api_version: machine.openshift.io/v1beta1
+    kind: MachineSet
+    state: present
+    resource_definition: "{{ lookup('template', 'machineset-infra-vsphere.j2') }}"
+    validate_certs: false
+  when: infra_post_install == True
+
+#- name: '[POSTINSTALL][INFRA-NODES] Deploy Infra Nodes MachineSet'
+#  vars:
+#    node_labels:
+#    - "{{ infra_label }}"
+#    name_identifier: "{{ infra_label }}"
+#  include_role:
+#    name: ocp4-post-machinesets
 
 - name: '[POSTINSTALL][INFRA-NODES] Wait for Infra Nodes to be available'
   k8s_info:
@@ -90,6 +139,7 @@
 
 - name: '[POSTINSTALL][INFRA-NODES] Wait for Cluster Monitoring to be available'
   k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
     kind: Pod
     wait: yes
     name: '{{ item }}'
