--- a/roles/ocp4-post-odf/tasks/odf-nodes.yml
+++ b/roles/ocp4-post-odf/tasks/odf-nodes.yml
@@ -21,13 +21,58 @@
     validate_certs: false
   when: mcp_odf == True
 
-- name: '[POSTINSTALL][ODF-NODES] Deploy ODF Nodes MachineSet'
-  vars:
-    node_labels:
-    - "{{ odf_label }}"
-    name_identifier: "{{ odf_label }}"
-  include_role:
-    name: ocp4-post-machinesets
+- name: '[OCP4-POSTINSTALL][MACHINESET] Fetch cluster information about the Infrastructure'
+  k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
+    api_version: config.openshift.io/v1
+    kind: Infrastructure
+    name: cluster
+  register: cluster_info
+
+- name: '[POSTINSTALL][MACHINESET] Search and fetch Infra id in {{ cluster_info.resources.0.status.infrastructureName }}-master-0 machine'
+  k8s_info:
+    kubeconfig: "{{ kubeconfig }}"
+    api_version: machine.openshift.io/v1beta1
+    kind: Machine
+    name: "{{ cluster_info.resources.0.status.infrastructureName }}-master-0"
+    namespace: openshift-machine-api
+  register: amimaster0
+
+- name: '[POSTINSTALL][MACHINESET] Build the {{ node_labels }} machineset facts'
+  set_fact:
+    machineset:
+      infrastructure_id: "{{ cluster_info.resources.0.status.infrastructureName }}"
+      node_labels: "{{ node_labels }}"
+      name_identifier: "{{ name_identifier }}"
+
+- name: '[POSTINSTALL][MACHINESET] Display the data for the {{ node_labels }} machinesets'
+  debug:
+    var: machineset
+
+- name: '[POSTINSTALL][MACHINESET] Create File Machineset for the{{ node_labels }} machineset'
+  template:
+    src: machineset-odf-vsphere.j2
+    dest: "{{ files_path }}/machineset-odf-vsphere.yaml"
+  when: install_odf == True
+
+- name: '[POSTINSTALL][MACHINESET] Create the {{ odf_label }} machineset'
+  k8s:
+    kubeconfig: "{{ kubeconfig }}"
+    name: openshift-machine-api
+    api_version: machine.openshift.io/v1beta1
+    kind: MachineSet
+    state: present
+    resource_definition: "{{ lookup('template', 'machineset-odf-vsphere.j2') }}"
+    validate_certs: false
+  when: install_odf == True
+
+#- name: '[POSTINSTALL][ODF-NODES] Deploy ODF Nodes MachineSet'
+#  vars:
+#    node_labels:
+#    - "{{ odf_label }}"
+#    name_identifier: "{{ odf_label }}"
+#  include_role:
+#    name: ocp4-post-machinesets
 
 - name: '[POSTINSTALL][ODF-NODES] Wait for ODF Nodes to be available'
   k8s_info:
@@ -46,7 +91,7 @@
 - name: '[DEBUG] - PRINT RESOURCES ODF NODES'
   debug:
     var: r_odf_nodes.resources.0.status.conditions | selectattr('type', 'match', '^Ready$') | map(attribute='status') | join | bool == True
- #with_items: "{{ r_odf_nodes.resources }}"
+
 - name: '[POSTINSTALL][ODF-NODES] Get ClusterVersion'
   k8s_info:
     kubeconfig: "{{ kubeconfig }}"
@@ -58,9 +103,11 @@
 - name: '[POSTINSTALL][INFRA-NODES] Set ocp4_workload_machinesets_cluster_version fact'
   set_fact:
     ocp4_workload_machinesets_cluster_version: "{{ r_cluster_version.resources[0].status.history[0].version }}"
+
 - name: '[POSTINSTALL][ODF-NODES] Wait for ODF Nodes to be ready'
   pause:
     seconds: 60
+
 - name: '[POSTINSTALL][ODF-NODES] - Print Cluster Version'
   debug:
     msg: 
