--- a/roles/ocp4-post-odf/vars/main.yml
+++ b/roles/ocp4-post-odf/vars/main.yml
@@ -1,4 +1,4 @@
 ---
 # vars file for roles/ocp4-post-odf
-#name_identifier: "{{ name_label.0 }}"
+name_identifier: "{{ name_label.0 }}"
 node_labels: "{{ odf_label }}"
