--- a/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
+++ b/roles/ocp4-post-infra-nodes/tasks/infra-nodes.yml
@@ -40,16 +40,12 @@
     namespace: openshift-machine-api
   register: amimaster0
 
-- name: DEBUG
-  debug:
-    var: amimaster0
-
 - name: '[POSTINSTALL][MACHINESET] Build the {{ node_labels }} machineset facts'
   set_fact:
     machineset:
       infrastructure_id: "{{ cluster_info.resources.0.status.infrastructureName }}"
-      node_labels: "{{ node_labels }}"
-      name_identifier: "{{ name_identifier }}"
+      node_labels: "{{ infra_label }}"
+      name_identifier: "{{ infra_label }}"
 
 - name: '[POSTINSTALL][MACHINESET] Display the data for the {{ node_labels }} machinesets'
   debug:
