--- a/roles/ocp4-post-odf/templates/odf-operator.yml
+++ b/roles/ocp4-post-odf/templates/odf-operator.yml
@@ -10,11 +10,11 @@ spec: {}
 apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
-  name: openshift-storage-operatorgroup
+  generateName: openshift-storage-
   namespace: openshift-storage
 spec:
   targetNamespaces:
-  - openshift-storage
+    - openshift-storage
 ---
 apiVersion: operators.coreos.com/v1alpha1
 kind: Subscription
@@ -22,8 +22,8 @@ metadata:
   name: odf-operator
   namespace: openshift-storage
 spec:
-  channel: "stable-4.10"
+  channel: stable-4.10
   installPlanApproval: Automatic
   name: odf-operator
-  source: redhat-operator-index
+  source: redhat-operators
   sourceNamespace: openshift-marketplace
