--- a/vars/vars.yml
+++ b/vars/vars.yml
@@ -1,5 +1,5 @@
 #General
-ocp4_version: '4.10.47'
+ocp4_version: '4.12.0'
 ocp4_base_domain: "zmlabs.co"
 ocp4_cluster_name: "ocp"
 kubeconfig: "{{ deploy_path }}/auth/kubeconfig"
@@ -18,6 +18,7 @@ infra_post_install: True
 install_logging: True
 bkp_etcd_post_install: True
 install_odf: True
+backup-files: True
 
 
 #### Only in Tower-mode
